# asciiarcade

./: .gitignore  CMakeLists.txt  README.md  makefile  setup.sh
include/: GameEntity.h  GameEntityStack.h  GameState.h  Particle.h  Scene.h  SceneView.h
src/: GameEntityStack.cpp  GameState.cpp  Scene.cpp  SceneView.cpp  main.cpp
src/utils/: README.md  echo.c
test/: GameStateTest.cpp  SceneTest.cpp  SceneViewTest.cpp
test/data/: scene_test_data.h
tests/: AllTests.cpp  CMakeLists.txt  Dockerfile  SceneTest.cpp
